# kick-platform

./: .eslintrc.json  .gitattributes  .gitignore  CLAUDE.md  PHASE_0_PLAN.md  PHASE_16_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_7_PLAN.md  PHASE_8_PLAN.md  README.md  REDESIGN_PLAN.md  angular.json  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json
.claude/: settings.json  settings.local.json
.claude/agents/: angular-platform-architect.md  auth-profile-backend-engineer.md  ci-cd-release-engineer.md  design-system-architect.md  frontend-security-reviewer.md  mfe-integration-engineer.md  (+2 more)
backend/: README.md
backend/sports-proxy/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/sports-proxy/src/sports_proxy/: __init__.py  cache.py  handler.py  router.py  secrets.py  types.py
backend/sports-proxy/src/sports_proxy/normalize/: fixture.py  match.py  standing.py  team.py
backend/sports-proxy/src/sports_proxy/provider/: api_football.py  id_mapping.py
backend/sports-proxy/tests/: conftest.py  test_cache.py  test_normalize.py  test_router.py
backend/sports-proxy/tests/fixtures/: api_football_live_fixture.json  api_football_standings.json  api_football_team.json  api_football_upcoming_fixture.json
design-mockups/: 01-stadium-floodlight.html  02-concourse.html  03-live-wire.html  04-floodlight-wire.html  index.html
infra/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
mockups/: app-mockups.html
scripts/: install-oxc-binding.cjs
(+372 files in other folders)
